# KICD-Curriculum-Designs

./: .gitignore  CLI_REFERENCE.md  CONTRIBUTING.md  FINAL_CHECKPOINT.md  INSTALLATION_VERIFIED.md  LICENSE  QUICK_START.md  README.md  SYSTEM_STATUS.md  TASK_10_SUMMARY.md  TASK_14_SUMMARY.md  TASK_20_SUMMARY.md  TASK_25_SUMMARY.md  TASK_8_SUMMARY.md  process_all_curricula.py  pyproject.toml  split_lower_primary.py  verify_setup.sh
Grade_10/: Agriculture Grade 10 - July 2025.md  Arabic Grade 10 - July 2025.md  Aviation Grade 10 - July 2025.md  Biology Grade 10 - July 2025.md  Business Studies Grade 10 - July 2025.md  Christian Religious Education Grade 10  - June 2025.md  English Grade 10 - July 2025.md
Grade_11/: Agriculture Grade 11 - October 2025.md  Arabic Grade 11- October 2025.md  Aviation Grade 11 - October 2025.md  Biology Grade 11 - October 2025.md  Business Studies Grade 11 -October 2025.md  CRE Grade 11 - October 2025.md  English Grade 11 - October 2025.md  Fine Arts Grade 11 - October 2025.md
Grade_12/: Fasihi ya Kiswahili Grade 12- Juni 2025.md  LITERATURE GRADE 12 - JUNE 2025.md
Grade_4/: AGRICULTURE Grade 4 30.07.2024.md  ARABIC GRADE 4 CURRICULUM DESIGN- Revised.md  CRE Grade 4 Curriculum Design - Revised.md  ENGLISH GRADE 4 Updated- Revised Sept.md  French Grade 4 Curriculum Design - Revised.md  GRADE 4 INDIGENOUS LANGUAGE DESIGN- Revised.md  German Grade 4 Edited - Revised.md  Grade 4  Science and Technology.md  Grade 4 Creative Arts Curriculum Design - Revised.md  Grade 4 Math Design - Revised.md  Grade 4 Social Studies  20.6.2024 - Revised.md  HRE GRADE 4 - Revised.md  IRE GRADE 4 CURRICULUM DESIGN - Revised.md  Kiswahili Gredi ya 4 - Revised.md  Mandarin Grade 4 - Revised.md
Grade_5/: AGRICULTURE Grade 5 30.07.2024.md  CRE GRADE 5 DESIGN - Revised.md  Creative Arts July 2024 final - Revised.md  ENGLISH GRADE 5 UPDATED -  Revised Sept.md  FINAL - GRADE 5 INDIGENOUS LANGUAGE - Revised Oct.md  FINAL ARABIC GRADE 5 CURRICULUM DESIGN - Revised.md  FRENCH GRADE 5  CURRICULUM DESIGN - Revised.md  GERMAN GRADE 5 Edited - Revised.md  Grade 5  Science and Technology.md  Grade 5 Mathematics.md  Grade 5 Social Studies - Revised.md  HRE GRADE 5 - Revised.md  IRE GRADE 5 CURRICULUM DESIGN - Revised.md  (+2 more)
(+153 files in other folders)
